--- a/common-mysql-generator/src/main/resources/templates/entity.vm
+++ b/common-mysql-generator/src/main/resources/templates/entity.vm
@@ -5,7 +5,7 @@ package $entityPackage;
 import $item;
 #end
 #end
-import com.datamesh.mysql.common.BaseEntity;
+import com.steve.mysql.common.BaseEntity;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
