--- a/common-mysql-generator/src/main/resources/templates/mapper.vm
+++ b/common-mysql-generator/src/main/resources/templates/mapper.vm
@@ -1,7 +1,7 @@
 package $mapperPackage;
 
 import org.apache.ibatis.annotations.Mapper;
-import com.datamesh.mysql.common.BaseMapper;
+import com.steve.mysql.common.BaseMapper;
 import $entityClassName;
 
 /**
