--- a/common-mysql-generator/src/main/resources/templates/service.vm
+++ b/common-mysql-generator/src/main/resources/templates/service.vm
@@ -1,6 +1,6 @@
 package $servicePackage;
 
-import com.datamesh.mysql.common.BaseService;
+import com.steve.mysql.common.BaseService;
 import $entityClassName;
 
 /**
