--- a/common-mysql-generator/src/main/resources/templates/controller.vm
+++ b/common-mysql-generator/src/main/resources/templates/controller.vm
@@ -25,6 +25,6 @@ public class $controllerName {
 
     @PostMapping("/update")
     public ResultVO<?> update(@RequestBody $entityRequestName $entityReqeustPropName){
-        // 填充 entity 数据
+        // todo usage
     }
 }
